# protos

./: README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
protos/: passport.proto  wallet.proto
src/protos/passport/: passport_pb2.py  passport_pb2.pyi  passport_pb2_grpc.py
src/protos/wallet/: wallet_pb2.py  wallet_pb2.pyi  wallet_pb2_grpc.py
